--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
@@ -71,9 +71,15 @@
 
             [In]
             [Bindable]
+            /**
+             * Inject a model to work on.
+             */
             public var commonModelLocator:CommonModelLocator;            
             [In]
             [Bindable]
+            /**
+             * Injected TideContext.
+             */
             public var tideContext:Context;
             [Bindable]
             private var selected:TransportUnitType;
