--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
@@ -27,14 +27,16 @@
         [Name("locationGroupView")]
         [ManagedEvent(name="LOAD_ALL_LOCATIONS")]
         [ManagedEvent(name="LOAD_ALL_LOCATION_GROUPS")]
+        [ManagedEvent(name="SAVE_LOCATION_GROUP")]
+        [ManagedEvent(name="LG.CHANGE_STATE")]
     </mx:Metadata>
 
     <!-- Scripts -->
     <mx:Script>
         <![CDATA[
             import mx.collections.ArrayCollection;
-        	import org.openwms.common.domain.values.LocationGroupState;
-            import org.openwms.common.domain.LocationGroup;
+            import org.openwms.web.flex.client.util.DisplayUtility;
+            import org.openwms.web.flex.client.util.BindingProperty;
             import org.openwms.web.flex.client.event.SwitchScreenEvent;
             import org.openwms.web.flex.client.common.event.CommonSwitchScreenEvent;
         	import org.openwms.web.flex.client.common.event.LocationGroupEvent;
@@ -42,28 +44,41 @@
             import org.openwms.web.flex.client.common.model.TreeDataDescriptor;
             import org.openwms.web.flex.client.common.model.TreeNode;
             import org.openwms.web.flex.client.common.model.CommonModelLocator;
+            import org.openwms.common.domain.values.LocationGroupState;
+            import org.openwms.common.domain.LocationGroup;
 
 	        [In]
 	        [Bindable]
+            /**
+             * Inject a model to work on.
+             */
 	        public var commonModelLocator:CommonModelLocator;
 
             [Bindable]
-            private var selectedLocationGroup : LocationGroup;
-
+            private var selected : LocationGroup;
             [Bindable]
             private var selectedParent : String;
-
             [Bindable]
             private var selectedLocations : ArrayCollection = new ArrayCollection();
-
             [Bindable]
             [Embed("/assets/images/LocationGroup.png")]
             private var nodeIcon:Class;
-
             [Bindable]
             [Embed("/assets/images/LocationGroup--Leaf.png")]
             private var leafIcon:Class;
+            [Bindable]
+            [Embed("/assets/images/LocationGroup--Leaf--Locked.png")]
+            private var leafIconLocked:Class;
+            
+            [Observer("LG.COLL_LOCATION_GROUPS_REFRESHED")]
+            public function refreshTree() : void {
+                trace("Refresh tree fired");
+                locationGroupTree.dataProvider.refresh();
+            }
 
+            /**
+             * When the screen is opened, try to load all Locations and LocationGroups, when not already done before.
+             */
             private function onShow() : void {
                 if (commonModelLocator.allLocationGroups.length == 0) {
                     dispatchEvent(new LocationGroupEvent(LocationGroupEvent.LOAD_ALL_LOCATION_GROUPS));
@@ -73,7 +88,61 @@
                 }
             }
             
-            private function locationGroupLabel(item : Object) : String {
+            /**
+             * Fire an event to save the selected LocationGroup.
+             */
+            private function saveLocationGroup():void {
+                var event:LocationGroupEvent = new LocationGroupEvent(LocationGroupEvent.SAVE_LOCATION_GROUP);
+                event.data = selected;
+                dispatchEvent(event);
+            }
+
+            /**
+             * On a change event of one of the state comboboxes, fire an event to save the new state directly.
+             */
+            private function changeState(event : Event):void {
+                var bindings:Array = [new BindingProperty(selected, "groupStateIn", groupStateInCmb, "selectedItem"),
+                                    new BindingProperty(selected, "groupStateOut", groupStateOutCmb, "selectedItem")];
+                DisplayUtility.bindProperties(new ArrayCollection(bindings), function execute():void {
+                        var evt:LocationGroupEvent = new LocationGroupEvent(LocationGroupEvent.CHANGE_STATE);
+                        evt.data = selected;
+                        dispatchEvent(evt);
+                });
+            }
+
+            /**
+             * Fire an event to reload all LocationGroups.
+             */
+            private function refresh() : void {
+                dispatchEvent(new LocationGroupEvent(LocationGroupEvent.LOAD_ALL_LOCATION_GROUPS));
+            }
+
+            private function switchView(e:Event) : void {
+                // fire event
+            }
+
+            private function onTreeClick(event : Event) : void {
+                selected = event.target.selectedItem.getData() as LocationGroup;
+                selectedParent = formatParentLocationGroup();
+                groupStateInCmb.selectedIndex = LocationGroupState.constants.indexOf(selected.groupStateIn);
+                groupStateOutCmb.selectedIndex = LocationGroupState.constants.indexOf(selected.groupStateOut);
+                showLocations();
+            }
+
+            private function showLocations() : void {
+                var locations : ArrayCollection = commonModelLocator.allLocations;
+                selectedLocations.removeAll();
+                for (var i : uint = 0; i < locations.length; i++) {
+                    if (locations[i].locationGroup == null) {
+                        continue;
+                    }
+                    if (locations[i].locationGroup.id == selected.id) {
+                        selectedLocations.addItem(locations[i]);
+                    }
+                }
+            }
+
+            private function formatLocationGroup(item : Object) : String {
                 if (item != null) {
                     if (item.getData() != null) {
                         return item.getData()['name'];
@@ -85,30 +154,9 @@
                 }
             }
 
-            public function onTreeClick(event : Event) : void {
-                selectedLocationGroup = event.target.selectedItem.getData() as LocationGroup;
-                selectedParent = findLocationGroup();
-                groupStateInCmb.selectedIndex = LocationGroupState.constants.indexOf(selectedLocationGroup.groupStateIn);
-                groupStateOutCmb.selectedIndex = LocationGroupState.constants.indexOf(selectedLocationGroup.groupStateOut);
-                showLocations();
-            }
-
-            private function showLocations() : void {
-                var locations : ArrayCollection = commonModelLocator.allLocations;
-                selectedLocations.removeAll();
-                for (var i : uint = 0; i < locations.length; i++) {
-                    if (locations[i].locationGroup == null) {
-                        continue;
-                    }
-                    if (locations[i].locationGroup.id == selectedLocationGroup.id) {
-                        selectedLocations.addItem(locations[i]);
-                    }
-                }
-            }
-
-            private function findLocationGroup() : String {
-                if (selectedLocationGroup.parent != null) {
-                    return selectedLocationGroup.parent.name;
+            private function formatParentLocationGroup() : String {
+                if (selected.parent != null) {
+                    return selected.parent.name;
                 } else {
                     return "--";
                 }
@@ -125,24 +173,20 @@
                 return "--";
             }
 
-            private function saveLocationGroup():void {
-                var event:LocationGroupEvent = new LocationGroupEvent(LocationGroupEvent.SAVE_LOCATION_GROUP);
-                event.data = selectedLocationGroup;
-                dispatchEvent(event);
-            }
-
-            private function refresh() : void {
-                dispatchEvent(new LocationGroupEvent(LocationGroupEvent.LOAD_ALL_LOCATION_GROUPS));
-            }
-
-            private function switchView(e:Event) : void {
-                // fire event
-            }
-
             private function getTreeIcon(item:Object):Class {
-            	if ((item as TreeNode).children == null) {
+                var node:TreeNode = item as TreeNode;
+                var lg:LocationGroup = node.getData() as LocationGroup;
+                if (node.children == null) {
+                    if (lg.groupStateIn == LocationGroupState.NOT_AVAILABLE ||
+                        lg.groupStateOut == LocationGroupState.NOT_AVAILABLE) {
+                        return leafIconLocked;
+                    }
             		return leafIcon;
             	}
+                if (lg.groupStateIn == LocationGroupState.NOT_AVAILABLE ||
+                    lg.groupStateOut == LocationGroupState.NOT_AVAILABLE) {
+                    return leafIconLocked;
+                }
                 return nodeIcon;
             }
         ]]>
@@ -158,14 +202,14 @@
     <mx:HRule x="10" y="53" width="95%"/>
     <mx:HBox x="10" y="63" verticalAlign="top" height="100%" width="95%">
 
-        <mx:Tree id="myTree" showRoot="false" width="236" iconFunction="getTreeIcon" dataProvider="{commonModelLocator.locationGroupTree}" dataDescriptor="{new TreeDataDescriptor()}" labelFunction="locationGroupLabel" change="onTreeClick(event)" height="95%">
-        </mx:Tree>
+        <mx:Tree id="locationGroupTree" showRoot="false" width="236" iconFunction="getTreeIcon" dataProvider="{commonModelLocator.locationGroupTree}" dataDescriptor="{new TreeDataDescriptor()}" labelFunction="formatLocationGroup" change="onTreeClick(event)" height="95%" />
+
         <mx:Canvas width="100%" height="95%">
             <x:XPanel x="0" y="0" width="100%" height="300" layout="absolute" title="Details" titleIcon="@Embed(source='/assets/images/LocationGroup.png')" toolTipBtn1="Switch View" onClickBtn1="switchView" iconBtn1="@Embed(source='assets/images/icons/switchView--small.png')">
 
                 <mx:HBox x="10" y="10" width="95%" height="25" borderStyle="solid" alpha="0.5" backgroundColor="#C2DAEF">
                     <mx:Label text="Location Group" fontSize="16" textDecoration="normal" width="170" textAlign="right" fontWeight="bold"/>
-                    <mx:Label text="{selectedLocationGroup.name}" fontSize="16" textDecoration="normal" width="100%" toolTip="{selectedLocationGroup.name}"/>
+                    <mx:Label text="{selected.name}" fontSize="16" textDecoration="normal" width="100%" toolTip="{selected.name}"/>
                 </mx:HBox>
 
                 <mx:HBox x="10" y="43" width="95%" height="18">
@@ -174,22 +218,24 @@
                 </mx:HBox>
 
                 <mx:Label x="10" y="69" text="Description" textAlign="right" width="170"/>
-                <mx:TextArea x="188" y="68" width="200" text="{selectedLocationGroup.description}"/>
+                <mx:TextArea x="188" y="68" width="200" text="{selected.description}"/>
 
                 <mx:Label x="10" y="120" text="Group Type" textAlign="right" width="170"/>
-                <mx:Label x="10" y="146" text="Infeed" textAlign="right" width="170"/>
-                <mx:Label x="10" y="176" text="Outfeed" textAlign="right" width="170"/>
-                <mx:Label text="{selectedLocationGroup.groupType}" width="100%" x="190" y="120"/>
+                <mx:Label text="{selected.groupType}" width="100%" x="190" y="120"/>
 
-                <mx:ComboBox id="groupStateInCmb" x="188" y="144" dataProvider="{LocationGroupState.constants}" />
-                <mx:ComboBox id="groupStateOutCmb" x="188" y="174" dataProvider="{LocationGroupState.constants}" />
-                <mx:CheckBox x="277" y="206" label="Counting active" selected="{selectedLocationGroup.locationGroupCountingActive}"/>
+                <mx:Label x="10" y="146" text="Infeed" textAlign="right" width="170"/>
+                <mx:ComboBox id="groupStateInCmb" x="188" y="144" dataProvider="{LocationGroupState.constants}" change="changeState(event)" />
+
+                <mx:Label x="10" y="176" text="Outfeed" textAlign="right" width="170"/>
+                <mx:ComboBox id="groupStateOutCmb" x="188" y="174" dataProvider="{LocationGroupState.constants}" change="changeState(event)" />
+
+                <mx:CheckBox x="277" y="206" label="Counting active" selected="{selected.locationGroupCountingActive}"/>
 
                 <mx:Label x="10" y="208" text="Maximum Fill Level" textAlign="right" width="170"/>
-                <mx:NumericStepper x="190" y="206" value="{selectedLocationGroup.maxFillLevel}" minimum="0" maximum="100" />
+                <mx:NumericStepper x="190" y="206" value="{selected.maxFillLevel}" minimum="0" maximum="100" />
 
                 <mx:Label x="10" y="234" text="System Code" textAlign="right" width="170"/>
-                <mx:Label text="{selectedLocationGroup.systemCode}" width="100%" x="188" y="234"/>
+                <mx:Label text="{selected.systemCode}" width="100%" x="188" y="234"/>
             </x:XPanel>
             <mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" x="0" y="341" width="100%" dataProvider="{selectedLocations}" height="100%">
                 <mx:columns>
