--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserList.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserList.mxml
@@ -22,11 +22,12 @@
  */
 -->
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" height="100%" xmlns:Renderers="org.openwms.web.flex.client.view.renderers.*"
-	creationComplete="initComp()" styleName="frameContainerSkin">
+	styleName="frameContainerSkin">
 
     <mx:Metadata>
         [Name("userList")]
         [ManagedEvent(name="LOAD_ALL_USERS")]
+        [ManagedEvent(name="userSelectionChanged")]
     </mx:Metadata>
 
 	<mx:Script>
@@ -36,15 +37,17 @@
 		
             [In]
             [Bindable]
+            /**
+             * Inject the model.
+             */
             public var modelLocator:ModelLocator;            
-			private var lastSelectedListObject:Object=null;
-			
-			private function initComp():void {
-			}
+			private var lastSelectedListObject:Object = null;
 			
             [Observer("USER_ADDED")]
-			public function userAdded():void {
-			}
+            /**
+             * Do something when a user was added. Currently nothing happens here.
+             */
+			public function userAdded():void { }
 			
 			private function onUserSelectionChanged(event:Event):void {
 				event.currentTarget.style = "selectedUserListItem";
@@ -52,6 +55,7 @@
 					lastSelectedListObject.style = "userListItem";
 				}
 				lastSelectedListObject = event.currentTarget;
+                dispatchEvent(new UserEvent(UserEvent.USER_SELECTION_CHANGED));
 			}
 		]]>
 	</mx:Script>
