Worked on usermanagement screens
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1378 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserList.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserList.mxml
@@ -27,7 +27,7 @@
     <mx:Metadata>
         [Name("userList")]
         [ManagedEvent(name="LOAD_ALL_USERS")]
-        [ManagedEvent(name="userSelectionChanged")]
+        [ManagedEvent(name="USER.SELECTION_CHANGED")]
     </mx:Metadata>
 
 	<mx:Script>
@@ -50,6 +50,7 @@
 			public function userAdded():void { }
 			
 			private function onUserSelectionChanged(event:Event):void {
+                trace("User selection changed");
 				event.currentTarget.style = "selectedUserListItem";
 				if (lastSelectedListObject != null && lastSelectedListObject != event.currentTarget) {
 					lastSelectedListObject.style = "userListItem";
