--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
@@ -114,8 +114,8 @@
 		 * When the User has no UserDetails, a new set is instantiated.
 		 */
 		public function setSelectedItem():void {
-			modelLocator.selectedUser = User(this.userData); 
-       		dispatchEvent(new Event(UserEvent.USER_SELECTION_CHANGED, true));
+			modelLocator.selectedUser = this.userData; 
+       		dispatchEvent(new Event("userSelectionChanged", true));
 		}
 		
 		/**
